tests/NormalTests/paczka1/small_fuzzy/75784891.err
Error in line 5: Ksqd2fYaTQn S279 40,99
Error in line 2: Ksqd2fYaTQn S279 30,1
Error in line 11: Ksqd2fYaTQn A125 13,49
Error in line 6: Ksqd2fYaTQn A125 47,8
